add new css rules

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,58 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  box-sizing: border-box;
+}
 body {
+  margin: 0;
   height: 100vh;
-  max-width: 700px;
-  margin: auto;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#root {
+  height: 100%;
+}
+
+/* Layout */
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
+  grid-template-columns: 1fr;
+  grid-template-rows: 3rem 1fr 3rem;
+  height: 100%;
+}
+header {
+  grid-area: header;
+  background-color: #203040;
+}
+main {
+  grid-area: main;
   padding: 1rem;
+}
+footer {
+  grid-area: footer;
+  background-color: #203040;
+  color: #ffffff;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.autosize {
+  max-width: 700px;
+}
+
+.bgblue {
+  background-color: rgb(87, 13, 248);
+  color: white;
+  text-align: center;
 }
